--- a/Stock Prediction.ipynb
+++ b/Stock Prediction.ipynb
@@ -394,7 +394,7 @@
    "source": [
     "def plot_moving_average(series, window, plot_intervals=False, scale=1.96):\n",
     "\n",
-    "    #To track and identify trends by smoothing normal day to day fluctuations.",
+    "    #To track and identify trends by smoothing normal day to day fluctuations.\n",
     "    rolling_mean = series.rolling(window=window).mean()\n",
     "    \n",
     "    plt.figure(figsize=(17,8))\n",
